# LearnOpenGL

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt
src/1-getting_started/1-1-hello_window/: CMakeLists.txt  main.cpp
src/1-getting_started/1-2-hello_window_clear/: CMakeLists.txt  main.cpp
src/1-getting_started/2-1-hello_triangle/: CMakeLists.txt  main.cpp
src/1-getting_started/2-2-hello_triangle_indexed/: CMakeLists.txt  main.cpp
src/1-getting_started/2-3-hello_triangle_exercise1/: CMakeLists.txt  main.cpp
src/1-getting_started/2-4-hello_triangle_exercise2/: CMakeLists.txt  main.cpp
src/1-getting_started/2-5-hello_triangle_exercise3/: CMakeLists.txt  main.cpp
src/1-getting_started/3-1-shaders_uniform/: CMakeLists.txt  main.cpp
src/1-getting_started/3-2-shaders_interpolation/: CMakeLists.txt  main.cpp
src/1-getting_started/3-3-shaders_class/: CMakeLists.txt  main.cpp
src/1-getting_started/3-4-shaders_exercise1/: CMakeLists.txt  main.cpp
src/1-getting_started/3-5-shaders_exercise2/: CMakeLists.txt  main.cpp
src/1-getting_started/3-6-shaders_exercise3/: CMakeLists.txt  main.cpp
src/1-getting_started/4-1-textures/: CMakeLists.txt  main.cpp
src/1-getting_started/4-2-textures_combined/: 4.2.texture.fs  CMakeLists.txt  main.cpp
src/1-getting_started/4-3-textures_exercise1/: 4.3.texture.fs  CMakeLists.txt  main.cpp
src/1-getting_started/4-4-textures_exercise2/: CMakeLists.txt  main.cpp
src/1-getting_started/4-5-textures_exercise3/: CMakeLists.txt  main.cpp
src/1-getting_started/4-6-textures_exercise4/: CMakeLists.txt  main.cpp
src/1-getting_started/5-1-transformations/: CMakeLists.txt  main.cpp
src/1-getting_started/5-2-transformations_exercise1/: CMakeLists.txt  main.cpp
src/1-getting_started/5-3-transformations_exercise2/: CMakeLists.txt  main.cpp
src/1-getting_started/6-1-coordinate_systems/: CMakeLists.txt  main.cpp
src/1-getting_started/6-2-coordinate_systems_depth/: CMakeLists.txt  main.cpp
src/1-getting_started/6-3-coordinate_systems_multiple/: CMakeLists.txt  main.cpp
src/1-getting_started/6-4-coordinate_systems_exercise3/: CMakeLists.txt  main.cpp
src/1-getting_started/7-1-camera_circle/: CMakeLists.txt  main.cpp
src/1-getting_started/7-2-camera_keyboard_dt/: CMakeLists.txt  main.cpp
src/1-getting_started/7-3-camera_mouse_zoom/: CMakeLists.txt  main.cpp
src/1-getting_started/7-4-camera_class/: CMakeLists.txt  main.cpp
src/1-getting_started/7-5-camera_exercise1/: CMakeLists.txt  main.cpp
src/1-getting_started/7-6-camera_exercise2/: CMakeLists.txt  main.cpp
src/2-lighting/1-colors/: CMakeLists.txt  main.cpp
src/2-lighting/2-1-basic_lighting_diffuse/: CMakeLists.txt  main.cpp
src/2-lighting/2-2-basic_lighting_specular/: CMakeLists.txt  main.cpp
src/2-lighting/2-3-basic_lighting_exercise1/: CMakeLists.txt  main.cpp
src/2-lighting/2-4-basic_lighting_exercise2/: 2.4.basic_lighting.fs  CMakeLists.txt  main.cpp
src/2-lighting/2-5-basic_lighting_exercise3/: CMakeLists.txt  main.cpp
src/2-lighting/3-1-materials/: CMakeLists.txt  main.cpp
src/2-lighting/3-2-materials_exercise1/: CMakeLists.txt  main.cpp
src/2-lighting/4-1-lighting_maps_diffuse_map/: CMakeLists.txt  main.cpp
src/2-lighting/4-2-lighting_maps_specular_map/: CMakeLists.txt  main.cpp
src/2-lighting/4-3-lighting_maps_exercise2/: CMakeLists.txt  main.cpp
src/2-lighting/4-4-lighting_maps_exercise4/: 4.4.lighting_maps.fs  CMakeLists.txt  main.cpp
src/2-lighting/5-1-light_casters_directional/: CMakeLists.txt  main.cpp
src/2-lighting/5-2-light_casters_point/: CMakeLists.txt  main.cpp
src/2-lighting/5-3-light_casters_spot/: CMakeLists.txt  main.cpp
src/2-lighting/5-4-light_casters_spot_soft/: CMakeLists.txt  main.cpp
src/2-lighting/6-multiple_lights/: CMakeLists.txt  main.cpp
src/2-lighting/6-multiple_lights_exercise1/: CMakeLists.txt  main.cpp
src/3-model_loading/1-model_loading/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/1-1-depth_testing/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/1-2-depth_testing_view/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/10-1-instancing_quads/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/10-2-asteroids/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/10-3-asteroids_instanced/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/11-1-anti_aliasing_msaa/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/11-2-anti_aliasing_offscreen/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/2-stencil_testing/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/3-1-blending_discard/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/3-2-blending_sort/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/4-face_culling_exercise1/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/5-1-framebuffers/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/5-2-framebuffers_exercise1/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/6-1-cubemaps_skybox/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/6-2-cubemaps_environment_mapping/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/8-advanced_glsl_ubo/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/9-1-geometry_shader_houses/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/9-2-geometry_shader_exploding/: CMakeLists.txt  main.cpp
src/4-advanced_opengl/9-3-geometry_shader_normals/: CMakeLists.txt  main.cpp
src/5-advanced_lighting/1-advanced_lighting/: CMakeLists.txt  main.cpp
src/5-advanced_lighting/2-gamma_correction/: CMakeLists.txt  main.cpp
src/5-advanced_lighting/3-1-1-shadow_mapping_depth/: CMakeLists.txt  main.cpp
src/5-advanced_lighting/3-1-2-shadow_mapping_base/: CMakeLists.txt  main.cpp
src/5-advanced_lighting/3-1-3-shadow_mapping/: CMakeLists.txt  main.cpp
src/5-advanced_lighting/3-2-1-point_shadows/: CMakeLists.txt  main.cpp
src/5-advanced_lighting/3-2-2-point_shadows_soft/: CMakeLists.txt  (+1 more)
src/includes/: animation.h  camera.h  entity.h  mesh.h  model.h  model_animation.h  shader.h  shader_c.h  shader_common.h  shader_m.h  shader_s.h  shader_t.h
(+85 files in other folders)
