file(COPY "resources" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

# -----------------------------------------------------------------------------

add_subdirectory("1-getting_started/1-1-hello_window")
add_subdirectory("1-getting_started/1-2-hello_window_clear")
add_subdirectory("1-getting_started/2-1-hello_triangle")
add_subdirectory("1-getting_started/2-2-hello_triangle_indexed")
add_subdirectory("1-getting_started/2-3-hello_triangle_exercise1")
add_subdirectory("1-getting_started/2-4-hello_triangle_exercise2")
add_subdirectory("1-getting_started/2-5-hello_triangle_exercise3")
add_subdirectory("1-getting_started/3-1-shaders_uniform")
add_subdirectory("1-getting_started/3-2-shaders_interpolation")
add_subdirectory("1-getting_started/3-3-shaders_class")
add_subdirectory("1-getting_started/3-4-shaders_exercise1")
add_subdirectory("1-getting_started/3-5-shaders_exercise2")
add_subdirectory("1-getting_started/3-6-shaders_exercise3")
add_subdirectory("1-getting_started/4-1-textures")
add_subdirectory("1-getting_started/4-2-textures_combined")
add_subdirectory("1-getting_started/4-3-textures_exercise1")
add_subdirectory("1-getting_started/4-4-textures_exercise2")
add_subdirectory("1-getting_started/4-5-textures_exercise3")
add_subdirectory("1-getting_started/4-6-textures_exercise4")
add_subdirectory("1-getting_started/5-1-transformations")
add_subdirectory("1-getting_started/5-2-transformations_exercise1")
add_subdirectory("1-getting_started/5-3-transformations_exercise2")
add_subdirectory("1-getting_started/6-1-coordinate_systems")
add_subdirectory("1-getting_started/6-2-coordinate_systems_depth")
add_subdirectory("1-getting_started/6-3-coordinate_systems_multiple")
add_subdirectory("1-getting_started/6-4-coordinate_systems_exercise3")
add_subdirectory("1-getting_started/7-1-camera_circle")
add_subdirectory("1-getting_started/7-2-camera_keyboard_dt")
add_subdirectory("1-getting_started/7-3-camera_mouse_zoom")
add_subdirectory("1-getting_started/7-4-camera_class")
add_subdirectory("1-getting_started/7-5-camera_exercise1")
add_subdirectory("1-getting_started/7-6-camera_exercise2")

# -----------------------------------------------------------------------------

add_subdirectory("2-lighting/1-colors")
add_subdirectory("2-lighting/2-1-basic_lighting_diffuse")
add_subdirectory("2-lighting/2-2-basic_lighting_specular")
add_subdirectory("2-lighting/2-3-basic_lighting_exercise1")
add_subdirectory("2-lighting/2-4-basic_lighting_exercise2")
add_subdirectory("2-lighting/2-5-basic_lighting_exercise3")
add_subdirectory("2-lighting/3-1-materials")
add_subdirectory("2-lighting/3-2-materials_exercise1")
add_subdirectory("2-lighting/4-1-lighting_maps_diffuse_map")
add_subdirectory("2-lighting/4-2-lighting_maps_specular_map")
add_subdirectory("2-lighting/4-3-lighting_maps_exercise2")
add_subdirectory("2-lighting/4-4-lighting_maps_exercise4")
add_subdirectory("2-lighting/5-1-light_casters_directional")
add_subdirectory("2-lighting/5-2-light_casters_point")
add_subdirectory("2-lighting/5-3-light_casters_spot")
add_subdirectory("2-lighting/5-4-light_casters_spot_soft")
add_subdirectory("2-lighting/6-multiple_lights")
add_subdirectory("2-lighting/6-multiple_lights_exercise1")

# -----------------------------------------------------------------------------

add_subdirectory("3-model_loading/1-model_loading")

# -----------------------------------------------------------------------------

add_subdirectory("4-advanced_opengl/1-1-depth_testing")
add_subdirectory("4-advanced_opengl/1-2-depth_testing_view")
add_subdirectory("4-advanced_opengl/2-stencil_testing")
add_subdirectory("4-advanced_opengl/3-1-blending_discard")
add_subdirectory("4-advanced_opengl/3-2-blending_sort")
add_subdirectory("4-advanced_opengl/4-face_culling_exercise1")
add_subdirectory("4-advanced_opengl/5-1-framebuffers")
add_subdirectory("4-advanced_opengl/5-2-framebuffers_exercise1")
add_subdirectory("4-advanced_opengl/6-1-cubemaps_skybox")
add_subdirectory("4-advanced_opengl/6-2-cubemaps_environment_mapping")
add_subdirectory("4-advanced_opengl/8-advanced_glsl_ubo")
add_subdirectory("4-advanced_opengl/9-1-geometry_shader_houses")
add_subdirectory("4-advanced_opengl/9-2-geometry_shader_exploding")
add_subdirectory("4-advanced_opengl/9-3-geometry_shader_normals")
add_subdirectory("4-advanced_opengl/10-1-instancing_quads")
add_subdirectory("4-advanced_opengl/10-2-asteroids")
add_subdirectory("4-advanced_opengl/10-3-asteroids_instanced")
add_subdirectory("4-advanced_opengl/11-1-anti_aliasing_msaa")
add_subdirectory("4-advanced_opengl/11-2-anti_aliasing_offscreen")

# -----------------------------------------------------------------------------

add_subdirectory("5-advanced_lighting/1-advanced_lighting")
add_subdirectory("5-advanced_lighting/2-gamma_correction")
add_subdirectory("5-advanced_lighting/3-1-1-shadow_mapping_depth")
add_subdirectory("5-advanced_lighting/3-1-2-shadow_mapping_base")
add_subdirectory("5-advanced_lighting/3-1-3-shadow_mapping")
add_subdirectory("5-advanced_lighting/3-2-1-point_shadows")
add_subdirectory("5-advanced_lighting/3-2-2-point_shadows_soft")
add_subdirectory("5-advanced_lighting/3-3-csm")
add_subdirectory("5-advanced_lighting/4-normal_mapping")
add_subdirectory("5-advanced_lighting/5-1-parallax_mapping")
add_subdirectory("5-advanced_lighting/5-2-steep_parallax_mapping")
add_subdirectory("5-advanced_lighting/5-3-parallax_occlusion_mapping")
add_subdirectory("5-advanced_lighting/6-hdr")
add_subdirectory("5-advanced_lighting/7-bloom")
add_subdirectory("5-advanced_lighting/8-1-deferred_shading")
add_subdirectory("5-advanced_lighting/8-2-deferred_shading_volumes")
add_subdirectory("5-advanced_lighting/9-ssao")

# -----------------------------------------------------------------------------

add_subdirectory("6-pbr/1-1-lighting")
add_subdirectory("6-pbr/1-2-lighting_textured")
add_subdirectory("6-pbr/2-1-1-ibl_irradiance_conversion")
add_subdirectory("6-pbr/2-1-2-ibl_irradiance")
add_subdirectory("6-pbr/2-2-1-ibl_specular")
add_subdirectory("6-pbr/2-2-2-ibl_specular_textured")

# -----------------------------------------------------------------------------

add_subdirectory("7-in_practice/1-debugging")
add_subdirectory("7-in_practice/2-text_rendering")
add_subdirectory("7-in_practice/3-2d_game/0-full_source")

# -----------------------------------------------------------------------------

add_subdirectory("8-guest/2020/oit")
add_subdirectory("8-guest/2020/skeletal_animation")
add_subdirectory("8-guest/2021/1-scene/1-scene_graph")
add_subdirectory("8-guest/2021/1-scene/2-frustum_culling")
add_subdirectory("8-guest/2021/2-csm")
add_subdirectory("8-guest/2021/3-tessellation/terrain_cpu_src")
add_subdirectory("8-guest/2021/3-tessellation/terrain_gpu_dist")
add_subdirectory("8-guest/2021/4-dsa")
add_subdirectory("8-guest/2022/5-computeshader_helloworld")
add_subdirectory("8-guest/2022/6-physically_based_bloom")
add_subdirectory("8-guest/2022/7-area_lights/1-area_light")
add_subdirectory("8-guest/2022/7-area_lights/2-multiple_area_lights")
